fix(css) create tour modal btn alignment

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -72,3 +72,8 @@ footer.page-footer {
     margin-left: 30px;
     list-style-type: initial;
 }
+
+/* Tour */
+.btn-cancel-tour{
+    float: left !important;
+}
